feat: switch navigation to Router Navigation - Changed the logic of getting task data on the task changes page - Added deeplinks

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -15,5 +15,6 @@
   "addNew": "New",
   "high": "High",
   "low": "Low",
-  "basic" : "Basic"
+  "basic" : "Basic",
+  "unknownRoute" : "Unknown route"
 }
