--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -15,5 +15,6 @@
   "addNew": "Новое",
   "high": "Высокий",
   "low": "Низкий",
-  "basic" : "Нет"
+  "basic" : "Нет",
+  "unknownRoute" : "Неизвестный маршрут"
 }
